--- a/registry/debug-adapters.yml
+++ b/registry/debug-adapters.yml
@@ -493,7 +493,7 @@ debug-adapters:
         options:
           - name: uVision
             description: Path to the uVision executable
-            yml-node: config
+            yml-node: uv4
             type: string
             default: "C:\\Keil_v5\\UV4\\UV4.exe"
           - name: Arguments
