Fix/wrong yml node for uvision (#46)
* Adds debug adapter capabilities for advanced configuration

Enhances debug adapter definitions by introducing a new `capabilities` section for each adapter. These capabilities include configurable options such as clock settings, debug protocols, tracing, telnet server options, and processor-specific parameters.

The update improves flexibility and supports advanced use cases for various adapters, ensuring better alignment with user needs and debugging requirements.

* Add .gitignore, update dependencies, and enhance schema

Introduces a new .gitignore file to exclude common Node.js files.
Updates README to include `ajv-cli` in the installation command.
Extends the debug adapter schema with new capabilities, adding
support for additional debug configurations such as clock, protocol,
trace, and telnet options.

* Align comments in debug-adapters.yml for improved readability

* Adds descriptive titles to debug-adapter configuration fields

* Adds descriptive titles to debug adapter capabilities

* Refactors debug adapter configurations and schema

Replaces the "capabilities" node with a new "ui" structure that defines user interface sections and options for debug adapter configurations. Updates the schema to support the "ui" structure, enhancing configurability and user clarity.

Simplifies and organizes YAML file layout by removing redundant comments and improving formatting consistency. Adds validation for new "ui" elements in the schema.

Improves maintainability and readability while aligning with updated debug adapter integration standards.

* reformat comments

* update comments

* Update debug adapter configurations and descriptions

Refines debug adapter YAML configurations by updating option descriptions, changing clock and trace types from number to string, and enhancing clarity of configurable parameters. Improves maintainability and alignment with expected usage.

* Refactor debug adapter configuration keys for consist

--- a/registry/debug-adapters.yml
+++ b/registry/debug-adapters.yml
@@ -493,11 +493,6 @@ debug-adapters:
         options:
           - name: uVision
             description: Path to the uVision executable
-            yml-node: config
+            yml-node: uv4
             type: string
             default: "C:\\Keil_v5\\UV4\\UV4.exe"
-          - name: Arguments
-            description: Additional command line arguments
-            yml-node: args
-            type: string
-            default: ""
